src/snapshots/treetop_core__engine__tests__test_policy_with_host_patterns__alice_no_example_deny.snap
---
source: src/engine.rs
expression: decision
---
{
  "Deny": {
    "version": {
      "hash": "873ef4b7a321b86308d989432858e9c81ed47e9c98a42578ce6a3ea333594540",
      "loaded_at": "[timestamp]"
    }
  }
}
