src/snapshots/treetop_core__engine__tests__test_policy_with_host_patterns__bob_web_and_example_allow.snap
---
source: src/engine.rs
expression: decision
---
{
  "Allow": {
    "policy": {
      "literal": "permit (\n    principal == User::\"bob\",\n    action == Action::\"create_host\",\n    resource is Host\n) when {\n    resource.nameLabels.contains(\"valid_web_name\") &&\n    resource.nameLabels.contains(\"example_domain\")\n};",
      "json": {
        "effect": "permit",
        "principal": {
          "op": "==",
          "entity": {
            "type": "User",
            "id": "bob"
          }
        },
        "action": {
          "op": "==",
          "entity": {
            "type": "Action",
            "id": "create_host"
          }
        },
        "resource": {
          "op": "is",
          "entity_type": "Host"
        },
        "conditions": [
          {
            "kind": "when",
            "body": {
              "&&": {
                "left": {
                  "contains": {
                    "left": {
                      ".": {
                        "left": {
                          "Var": "resource"
                        },
                        "attr": "nameLabels"
                      }
                    },
                    "right": {
                      "Value": "valid_web_name"
                    }
                  }
                },
                "right": {
                  "contains": {
                    "left": {
                      ".": {
                        "left": {
                          "Var": "resource"
                        },
                        "attr": "nameLabels"
                      }
                    },
                    "right": {
                      "Value": "example_domain"
                    }
                  }
                }
              }
            }
          }
        ]
      }
    },
    "version": {
      "hash": "873ef4b7a321b86308d989432858e9c81ed47e9c98a42578ce6a3ea333594540",
      "loaded_at": "[timestamp]"
    }
  }
}
